# fastapi-playground

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
demo/: main.py
tutorial/: main.py
